chore: update some deps and reduce vulnerabilities

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "gulp": "3.9.1",
     "gulp-autoprefixer": "^6.0.0",
     "gulp-clean-css": "3.9.0",
-    "gulp-connect": "5.0.0",
+    "gulp-connect": "^5.6.1",
     "gulp-plumber": "1.1.0",
     "gulp-rename": "1.2.2",
     "gulp-sass": "^3.1.0",
@@ -39,11 +39,11 @@
     "gulp-sass": "^3.1.0",
     "gulp-stylelint": "6.0.0",
     "gulp-watch-less": "1.0.1",
-    "http-server": "^0.9.0",
-    "hugo-bin": "^0.17.0",
+    "http-server": "^0.11.1",
+    "hugo-bin": "^0.37.0",
     "install": "0.10.1",
     "jake": "^8.0.15",
-    "jshint": "^2.9.4",
+    "jshint": "^2.9.6",
     "karma": "^1.7.1",
     "karma-chai": "^0.1.0",
     "karma-commonjs": "1.0.0",
